<feat: working on virtual threads optimized version of the library>